force-app/main/default/objects/OpportunityLineItem/fields/Commission_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Commission_Eligible__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if this product line is eligible for commission calculations</description>
    <inlineHelpText>Check this box if sales reps should earn commission on this product line</inlineHelpText>
    <label>Commission Eligible</label>
    <type>Checkbox</type>
</CustomField>