force-app/main/default/objects/OpportunityLineItem/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <description>Cost price of this Product</description>
    <inlineHelpText>Cost price of this Product</inlineHelpText>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>