force-app/main/default/objects/OpportunityLineItem/fields/Include_in_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Renewal__c</fullName>
    <description>Should this product be included in renewal opportunities?</description>
    <label>Include in Renewal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>