force-app/main/default/objects/OpportunityLineItem/fields/Line_Margin__c.field-meta.xml
<CustomField>
    <fullName>Line_Margin__c</fullName>
    <formula>TotalPrice -  Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>