force-app/main/default/objects/OpportunityLineItem/fields/Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Margin_Percent__c</fullName>
    <formula>IF(TotalPrice &gt; 0, (TotalPrice - Total_Cost__c) / TotalPrice, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>