force-app/main/default/objects/OpportunityLineItem/fields/Renewal_Status__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Status__c</fullName>
    <description>Denotes whether the Opp Line will be part of any renewal Opportunity (Defaults From Product)</description>
    <label>Renewal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renews</fullName>
            </value>
            <value>
                <fullName>Does Not Renew</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>